--- a/pages/contact_page.html
+++ b/pages/contact_page.html
@@ -10,7 +10,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
-<body style="background-color: #f9fad5">
+<body style="background-color: #c8c9a6">
     <div class="header">
         <div class="head">Contact Us </div>
     </div>
