--- a/pages/contact_page.html
+++ b/pages/contact_page.html
@@ -84,7 +84,7 @@
 
 
     <script>
-        function readym() {
+        function ready() {
             let confValue = confirm("Are You Sure? You want to move to another page!")
             if (confValue == true) {
                 return true;
