--- a/pages/contact_page.html
+++ b/pages/contact_page.html
@@ -53,7 +53,7 @@
                 <label for="EMAIL"></label>
                 <input type="email" id="EMAIL" required placeholder="Email" class="name-customer"><br>
                 <label for="mess"></label>
-                <input type="text" id="mess" complete placeholder="Message" required class="message-customer"><br><br>
+                <textarea name="text" id="mess" cols="30" rows="10"complete placeholder="Message" required class="message-customer"></textarea><br><br>
                 <button class="button" onclick="messageAlert()">Send</button><br><br>
             </form>
         </div>
