--- a/pages/contact_page.html
+++ b/pages/contact_page.html
@@ -13,7 +13,7 @@
 <body style="background-color: #f9fad5">
     <div class="header">
         <div class="head">Contact Us </div>
-        
+
     </div>
     <iframe
         src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d1891.8577531523456!2d73.9694876!3d18.4965414!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDI5JzQ2LjciTiA3M8KwNTgnMTIuNyJF!5e0!3m2!1sen!2sin!4v1712574417177!5m2!1sen!2sin"
@@ -88,16 +88,16 @@
         function ready() {
             let confValue = confirm("Are You Sure? You want to move to another page!")
             if (confValue == true) {
-                return true;
+                return true
 
             }
             else {
-                return false;
+                return false
             }
         }
         function messageAlert() {
 
-            alert("You are successfully send the message")
+            alert("You are successfully send the message.")
         }
 
     </script>
