--- a/pages/add_to_cart.html
+++ b/pages/add_to_cart.html
@@ -11,9 +11,21 @@
     
 </head>
 <body>
-    <h1>Shopping Cart</h1>
+    <div>
+        <h1>Shopping Cart</h1>
+        <div>
+            <div>Product Details</div>
+            <div>
+                <h2>Price Details</h2>
+                <div>
+                    <button type="button">Continue Shopping</button>
+                    <button type="button">Place Order</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" 
     crossorigin="anonymous"></script>
