grid system is applied.

--- a/pages/add_to_cart.html
+++ b/pages/add_to_cart.html
@@ -13,9 +13,9 @@
 <body>
     <div>
         <h1>Shopping Cart</h1>
-        <div>
-            <div>Product Details</div>
-            <div>
+        <div class="row">
+            <div class="col-8">Product Details</div>
+            <div class="col-4">
                 <h2>Price Details</h2>
                 <div>
                     <button type="button">Continue Shopping</button>
