Price Details are added.

--- a/pages/add_to_cart.html
+++ b/pages/add_to_cart.html
@@ -18,6 +18,25 @@
             <div class="col-4">
                 <h2>Price Details</h2>
                 <div>
+                    <span>Total Product Price</span>
+                    <span>₹400</span>
+                </div>
+                <div>
+                    <span>Total Discount</span>
+                    <span>₹100</span>
+                </div>
+                <div>
+                    <span>Delivery Charges</span>
+                    <span>Free Delivery</span>
+                </div>
+                <div>
+                    <span>Total Amount</span>
+                    <span>₹500</span>
+                </div>
+                <div>
+                    <span>Safe and secure payment. Easy returns. 100% guaranntee.</span>
+                </div>
+                <div>
                     <button type="button">Continue Shopping</button>
                     <button type="button">Place Order</button>
                 </div>
