--- a/pages/add_to_cart.html
+++ b/pages/add_to_cart.html
@@ -8,10 +8,15 @@
     rel="stylesheet" 
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
+    <style>
+        .container{
+            box-shadow: 0px 0px 5px 0px rgb(90, 89, 89);
+        }
+    </style>
     
 </head>
 <body>
-    <div>
+    <div class="container bg-white mt-5 px-4 py-4">
         <h1>Shopping Cart</h1>
         <div class="row">
             <div class="col-8">Product Details</div>
