css is added to heading 1.

--- a/pages/add_to_cart.html
+++ b/pages/add_to_cart.html
@@ -9,15 +9,30 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
     crossorigin="anonymous">
     <style>
+        body{
+            background-color: rgb(248, 145, 162);
+
+        }
         .container{
             box-shadow: 0px 0px 5px 0px rgb(90, 89, 89);
+        }
+        .h1{
+            background-color: rgb(247, 28, 112);
+            padding: 6px;
+            font-size: 31px;
+            font-weight: bolder;
+            color: white;
+            text-align: center;
+            margin-bottom: 20px;
+            border-radius: 2px;
+            box-shadow: 2px 2px 5px 0px rgb(48, 45, 45);
         }
     </style>
     
 </head>
 <body>
     <div class="container bg-white mt-5 px-4 py-4">
-        <h1>Shopping Cart</h1>
+        <h1 class="h1">Shopping Cart</h1>
         <div class="row">
             <div class="col-8">Product Details</div>
             <div class="col-4">
