--- a/pages/add_to_cart.html
+++ b/pages/add_to_cart.html
@@ -27,6 +27,14 @@
             border-radius: 2px;
             box-shadow: 2px 2px 5px 0px rgb(48, 45, 45);
         }
+        .product-div{
+            box-shadow: 0px 0px 5px 0px rgb(48, 45, 45);
+        }
+        .price-div{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
     </style>
     
 </head>
@@ -34,22 +42,26 @@
     <div class="container bg-white mt-5 px-4 py-4">
         <h1 class="h1">Shopping Cart</h1>
         <div class="row">
-            <div class="col-8">Product Details</div>
+
+            <div class="col-8 product-div">
+                <h2>Product Details</h2>
+            </div>
+
             <div class="col-4">
                 <h2>Price Details</h2>
-                <div>
+                <div class="price-div">
                     <span>Total Product Price</span>
                     <span>₹400</span>
                 </div>
-                <div>
+                <div class="price-div">
                     <span>Total Discount</span>
                     <span>₹100</span>
                 </div>
-                <div>
+                <div class="price-div">
                     <span>Delivery Charges</span>
                     <span>Free Delivery</span>
                 </div>
-                <div>
+                <div class="price-div">
                     <span>Total Amount</span>
                     <span>₹500</span>
                 </div>
