--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -242,6 +242,7 @@
         modeImg.src = "./../png/menu-Card/dark-mode.png";
         modeContainer.classList.add = "darkMode";
         modeContainer.classList.remove = "lightMode";
+        modeContainer.className= "darkBody"
         alert(`Now You are in Dark Mode`)
     }
         
