--- a/index.html
+++ b/index.html
@@ -429,22 +429,57 @@
                         <p class="flavour-price">₹ 260.00 </p>
                     </div>
                 </div>
-               
+
             </div>
-             <button class="product-btn">ALL PRODUCTS</button>
+            <button class="product-btn">ALL PRODUCTS</button>
         </div>
         <div class="menu">
-            <div class="menu-dis">
-            <h3>ICE CREAM MENU</h3>
-            <h1>Take The Experience Of Our Delightful</h1>
-            <h1>Ice Cream Menu</h1></div>
+            <div class="menu-discripton">
+                <h3>ICE CREAM MENU</h3>
+                <h1>Take The Experience Of Our Delightful</h1>
+                <h1>Ice Cream Menu</h1>
+            </div>
+            <div class="flex menu-product">
+                <div class=" menu-card-icons">
+                    <div>
+                        <img src="./icons/cone.png" width="150px" alt="">
+                    </div>
+                    <div>
+                        <h2>Ice Cream Cone</h2>
+                    </div>
+                </div>
+                <div class=" menu-card-icons">
+                    <div>
+                        <img src="./icons/stick-ice.png" width="150px" alt="">
+                    </div>
+                    <div>
+                        <h2>Ice Cream Stick</h2>
+                    </div>
+                </div>
+                <div class=" menu-card-icons">
+                    <div>
+                        <img src="./icons/cup.png" width="150px" alt="">
+                    </div>
+                    <div>
+                        <h2>Ice Cream Cup</h2>
+                    </div>
+                </div>
+                <div class=" menu-card-icons">
+                    <div>
+                        <img src="./icons/box.png" width="150px" alt="">
+                    </div>
+                    <div>
+                        <h2>Box Ice Cream</h2>
+                    </div>
+                </div>
+            </div>
         </div>
-           
 
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-            crossorigin="anonymous"></script>
+
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
