--- a/index.html
+++ b/index.html
@@ -441,7 +441,7 @@
             </div>
             <div class="flex menu-product">
                 <div class=" menu-card-icons">
-                    <div>
+                    <div class="card-img">
                         <img src="./icons/cone.png" width="150px" alt="">
                     </div>
                     <div>
@@ -449,7 +449,7 @@
                     </div>
                 </div>
                 <div class=" menu-card-icons">
-                    <div>
+                    <div class="card-img">
                         <img src="./icons/stick-ice.png" width="150px" alt="">
                     </div>
                     <div>
@@ -457,7 +457,7 @@
                     </div>
                 </div>
                 <div class=" menu-card-icons">
-                    <div>
+                    <div class="card-img">
                         <img src="./icons/cup.png" width="150px" alt="">
                     </div>
                     <div>
@@ -465,7 +465,7 @@
                     </div>
                 </div>
                 <div class=" menu-card-icons">
-                    <div>
+                    <div class="card-img">
                         <img src="./icons/box.png" width="150px" alt="">
                     </div>
                     <div>
