--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -11,12 +11,14 @@
 <body style="background-color:aliceblue;">
   <header>
     <h1>Ice Cream Parlor</h1>
+<div class="themeParent">
     <div  id="mode-Container" class="mode-container lightMode">
         <img src="./../png/menu-Card/dark-mode.png" id="mode" height="20px" onclick="Darkmode()">
     </div>
-    <div  id="mode-Container" class="mode-container">
+    <div  id="mode-Container" class="mode-container lightMode">
         <img src="./../png/menu-Card/light-mode.png" id="mode" height="20px" onclick="Lightmode()">
     </div>
+</div>
   </header>
  <div class="name-container text-light ">
    <h2 class="page-heading text-center "> Products</h2>
