flavour_page.html file is added.

--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -106,9 +106,18 @@
   <div class="filter-container">
     <img src="./../icons/menupage-icons/filter.png" height="20px" alt="">Filter
   </div>
-
+<p>Available Desserts</p>
   <div>
-
+     <div>
+         <p> Cookies </p>
+         <p>Ice-Cream </p>
+         <p>Cones</p>
+         <p>Ice-Cream Bucket</p>
+         <p>Ice-Cream Sundae</p>
+     </div>
+     <div>
+       <iframe src="" frameborder="0"></iframe>
+     </div>
   </div>
   
 
