menu page and flavour_page is modified.

--- a/pages/menu_page.html
+++ b/pages/menu_page.html
@@ -109,14 +109,14 @@
 <p>Available Desserts</p>
   <div>
      <div>
-         <p> Cookies </p>
-         <p>Ice-Cream </p>
-         <p>Cones</p>
-         <p>Ice-Cream Bucket</p>
-         <p>Ice-Cream Sundae</p>
+         <p class="category-div"> <a href="./../Pages/cookies.html" target="screen">Cookies</a> </p>
+         <p class="category-div"><a href="./../Pages/cones.html"target="screen"></a>>Ice-Cream </a></p>
+         <p class="category-div"><a href="./../Pages/cones.html" target="screen">Cones</a></p>
+         <p class="category-div"><a href="./../Pages/iceCreamBucket.html" target="screen">Ice-Cream Bucket</a></p>
+         <p class="category-div"><a href="./../Pages/icecreamSunade.html" target="screen">Ice-Cream Sundae</a></p>
      </div>
      <div>
-       <iframe src="" frameborder="0"></iframe>
+       <iframe src="./../Pages/flavour_page.html" height="800px" width="700px" name="screen" frameborder="0"></iframe>
      </div>
   </div>
   
