--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 <body>
     <header>
         <div class="nav-container flex" id="nav">
-            <div class="right-flex">
-                <h1>LOGO</h1>
+            <div class="right-flex flex">
+                <img src="./imgs/menu.png" height="40px" class="hamburger" onclick="openNavs()" alt="">
+                <h1 class="logo">LOGO</h1>
             </div>
             <div class="mid-flex">
                 <ul class="menu-list flex" type="none">
@@ -31,9 +32,9 @@
             </div>
             <div class="left-flex">
                 <img src="./icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
-                <img src="./icons/add-contact.png" class="nav-icons" alt="">
-                <img src="./icons/heart.png" class="nav-icons" alt="">
-                <img src="./icons/shopping-bag.png" class="nav-icons" alt="" onclick="openCart()">
+                <img src="./icons/add-contact.png" class="nav-icons login-icon" alt="">
+                <img src="./icons/heart.png" class="nav-icons  heart-icon" alt="">
+                <img src="./icons/shopping-bag.png" class="nav-icons" alt="" onclick="openCarts()">
             </div>
         </div>
         <div id="myOverlay" class="overlay">
@@ -46,9 +47,9 @@
                 </form>
             </div>
         </div>
-        <div id="mySidenav" class="sidenav">
-            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-            <p class="cart">Shopping Cart</p>
+        <div id="mySidenav1" class="sidenav1">
+            <a href="javascript:void(0)" class="closebtn1" onclick="closeNavs()">&times;</a>
+            <p class="cart1">Shopping Cart</p>
             <hr>
         </div>
 
@@ -67,6 +68,13 @@
             <img src="./icons/oval.png" alt="" class="slide-btn btn-2" id="slide-btn1"
                 onclick="changeSlideBtn('./imgs/s6.jpg')">
         </div>
+        <div id="mySidenav" class="sidenav">
+            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="#">About</a>
+            <a href="#">Services</a>
+            <a href="#">Clients</a>
+            <a href="#">Contact</a>
+          </div>
 
 
     </header>
@@ -287,48 +295,6 @@
 
             </div>
         </div>
-
-
-
-
-
-        <!-- <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-                <div class="carousel-item active flex">
-                    <img src="./imgs/ba20.webp" class=" w-10 visit-img" alt="...">
-                    <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
-                    <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
-                    <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
-                    <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
-                </div>
-                <div class="carousel-item flex">
-                    <img src="./imgs/ba21.webp" class=" w-10 visit-img" alt="...">
-                    <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
-                    <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
-                    <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./imgs/ba22.webp" class=" w-10 visit-img" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./imgs/ba19.webp" class=" w-10 visit-img" alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="./imgs/ba20.webp" class=" w-10 visit-img" alt="...">
-                </div>
-            </div>
-            <button class="carousel-control-prev prev-btn" type="button" data-bs-target="#carouselExample"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next prev-btn" type="button" data-bs-target="#carouselExample"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div> -->
-
         <div class="about-section flex">
             <div class="about-section-dis">
                 <p class="mb-4 description">OUR ABOUT US</p>
