--- a/index.html
+++ b/index.html
@@ -87,21 +87,21 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active flex">
                         <img src="./imgs/ba20.webp" class="visit-img" alt="">
-                        <img src="./imgs/ba21.webp" class="visit-img" alt="">
-                        <img src="./imgs/ba22.webp" class="visit-img" alt="">
-                        <img src="./imgs/ba19.webp" class="visit-img" alt="">
+                        <img src="./imgs/ba21.webp" class="visit-img visit-img1 " alt="">
+                        <img src="./imgs/ba22.webp" class="visit-img visit-img2" alt="">
+                        <img src="./imgs/ba19.webp" class="visit-img visit-img3" alt="">
                     </div>
                     <div class="carousel-item active flex">
                         <img src="./imgs/home/ba23.jpg" class="visit-img" alt="">
-                        <img src="./imgs/ba20.webp" class="visit-img" alt="">
-                        <img src="./imgs/ba21.webp" class="visit-img" alt="">
-                        <img src="./imgs/ba22.webp" class="visit-img" alt="">
+                        <img src="./imgs/ba20.webp" class="visit-img visit-img1" alt="">
+                        <img src="./imgs/ba21.webp" class="visit-img visit-img2" alt="">
+                        <img src="./imgs/ba22.webp" class="visit-img visit-img3" alt="">
                     </div>
                     <div class="carousel-item active flex">
-                        <img src="./imgs/ba22.webp" class="visit-img" alt="">
-                        <img src="./imgs/home/ba23.jpg" class="visit-img" alt="">
-                        <img src="./imgs/ba20.webp" class="visit-img" alt="">
-                        <img src="./imgs/ba21.webp" class="visit-img" alt="">
+                        <img src="./imgs/ba22.webp" class="visit-img visit-img" alt="">
+                        <img src="./imgs/home/ba23.jpg" class="visit-img visit-img1" alt="">
+                        <img src="./imgs/ba20.webp" class="visit-img visit-img2" alt="">
+                        <img src="./imgs/ba21.webp" class="visit-img visit-img3" alt="">
                     </div>
                 </div>
                 <button class="carousel-control-prev prev-btn" type="button" data-bs-target="#carouselExample"
