--- a/index.html
+++ b/index.html
@@ -244,9 +244,9 @@
                         <img src="./imgs/menu-card/Creamy-Cake.jpg" class="flavour-img" alt="">
                     </div>
                     <div class="effect-hover">
-                        <img src="./icons/menupage-icons/shopping-bag.png" class="hover-image" title="add to cart">
-                        <img src="./icons/menupage-icons/search.png" class="hover-image" title="search ">
-                        <img src="./icons/menupage-icons/wishlist.png" class="hover-image" title="wishlist">
+                        <img src="./icons/shopping-bag.png" class="hover-image" title="add to cart">
+                        <img src="./icons/magnifying-glass.png" class="hover-image" title="search ">
+                        <img src="./icons/heart.png" class="hover-image" title="wishlist">
                     </div>
                     <div class="flavour-description">
                         Creamy Cake
@@ -438,6 +438,13 @@
                         <h2>Box Ice Cream</h2>
                     </div>
                 </div>
+            </div>
+        </div>
+
+
+        <div>
+            <div>
+                <img src="" alt="">
             </div>
         </div>
 
