--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -8,7 +8,7 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <title>About Page</title>
-    <link rel="stylesheet" href="/css/about_us.css"/>
+    <link rel="stylesheet" href="/css/about-us.css"/>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
         <h1 class="banner-heading "> About us</h1>  
         <div class="banner-text fs-4"> <a href="/index.html" class="banner-color"> Home</a> 
             <span class="banner-color"> > </span>
-        <a href="/Pages/about_us.html" class="banner-color"> About Us</a></div>
+        <a href="/Pages/about-us.html" class="banner-color"> About Us</a></div>
     </div>
     
     <div class="m-5 p-5">
