--- a/Pages/review-page.html
+++ b/Pages/review-page.html
@@ -6,7 +6,7 @@
 	<meta name="viewport"
 		content="width=device-width, 
 				initial-scale=1.0">
-	<link rel="stylesheet" href="./../css/review_page.css">
+	<link rel="stylesheet" href="./../css/review-page.css">
 	<title>Reviews For Ice Cream Parlour</title>
 </head>
 
