--- a/Pages/product-card.html
+++ b/Pages/product-card.html
@@ -140,7 +140,7 @@
 </div>
 
 <!-- Card making-->
-     <div  class=container col col-lg-4 col-md-2 col-sm-1 m-4">
+     <div  class="container col col-lg-4 col-md-2 col-sm-1 m-4">
         <img class="icecream" src="./../imgs/product-card/Creamy-Cake.jpg" height="200" alt="bottle"/>
          <div class="description">
            <h2>Creamy Cake
@@ -158,7 +158,7 @@
 </div>
 
 <!-- Card making-->
-     <div class=container col col-lg-4 col-md-2 col-sm-1">
+     <div class="container col col-lg-4 col-md-2 col-sm-1">
         <img class="icecream1" src="./../imgs/product-card/fashion-cat.webp" height="200" alt="bottle"/>
          <div class="description">
            <h2>Fashion cat
@@ -175,17 +175,7 @@ No products are available.
     </div>
 </div>
 </div>
-
-<h1 class="heading3">Review</h1>
-<div class="rv">
-    <div class="rv-d"><img src="./../imgs/review-page/client1.avif" width="300px"><br/><b>Joseph</b><br/><span class="rv-des">Eating ice cream makes me happy. It’s a mouth-watering dessert for everyone. They many flavors in India that offers ice creams in form of cone, cup, stick etc.</span><br/><img src="./../imgs/review-page/5rating.png" height="45px"/></div>
-    <div class="rv-d"><img src="./../imgs/review-page/client2.webp" width="300px"><br/><b>Daisy</b><br/><span class="rv-des">HI today I toking about five best ice cream I really like all ice cream but I mostly like to eat vanauala ice cream is too for eat and it is not so costly vanauala ice cream given good value of money and second name is carnato ice cream given a best ice cream to eat and third name is chocabar ice cream is really good for eat I really enjoy to eat</span><br/><img src="./../imgs/review-page/4rating.png" height="45px"/></div>
-    <div class="rv-d"><img src="./../imgs/review-page/client3.webp" width="300px"><br/><b>Grace</b><br/><span class="rv-des">Hello friends I am a great fan of eating ice creams and I have came here to share one of my marvelous experience of eating ice creams.well, before starting my experience let me tell you that my favorite flavor of icecream is'vanilla'.i eat it whenever I feel sad or whenever I am angry.i am in a habit o eating ice creams all over the year except when I have cold or cough.</span><br/><img src="./../imgs/review-page/5rating.png" height="45px"/></div>
-    <div class="rv-d rv-d2"><img src="./../imgs/review-page/client4-1.jpg" width="300px"><br/><b>Justin</b><br/><span class="rv-des">Creamy desert icecream service was a masterpiece. They skillfully transformed our venue into a fairy tale setting, with every element thoughtfully curated.Grateful for their expertise in turning dreams into reality.</span><br/><img src="./../imgs/review-page/4rating.png" height="45px"/></div>
-</div>
-
-    
-         <script>
+<script>
            function changeimage(b)
             {
                 const flavour = document.getElementById('choco2');
