--- a/Pages/registration.html
+++ b/Pages/registration.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Registration</title>
-    <link rel="stylesheet" href="/css/login_page.css"/>
+    <link rel="stylesheet" href="/css/login-page.css"/>
 </head>
 <body>
 
@@ -45,7 +45,7 @@
           <div class="d-block m-3 fs-5"> <button type="submit" class="btn btn-lg register-btn "> Register</button></div>
 
           <div>
-            <button class="account my-3">  <a href="/Pages/login_page.html" style="color: #e83e8c;" >Back to log-In</a></button>
+            <button class="account my-3">  <a href="/Pages/login-page.html" style="color: #e83e8c;" >Back to log-In</a></button>
         </div>
       </div>
     </div>
