--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
     <div class="visit">
         <span class="headings">VISIT OUR STORE</span>
+        <!-- slider -->
         <div class="visit-images-containere">
             <div id="carouselExample" class="carousel slide margin-left">
                 <div class="carousel-inner">
@@ -117,6 +118,7 @@
             </div>
         </div>
     </div>
+    <!-- slider end -->
     <div class="Seller-container">
         <span class="headings ">Our Best Seller</span>
         <div class="flex seller-heading">
@@ -258,7 +260,7 @@
 
             </div>
         </div>
-
+<!-- image zoom hover -->
         <div class="margin-top margin-bottom">
             <div class="flex img-cont">
                 <div class="img-size">
@@ -295,6 +297,7 @@
 
             </div>
         </div>
+        <!-- end hover -->
         <div class="about-section flex">
             <div class="about-section-dis">
                 <p class="mb-4 description">OUR ABOUT US</p>
