button changes apply

--- a/Pages/product-card.html
+++ b/Pages/product-card.html
@@ -99,7 +99,7 @@
      </div></div>
      <!--Cards are started-->
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-    <u> <h1 class="fs-1 text-center">More about our products</h1></u>
+    <h1 class="fs-1 text-center">More about our products</h1>
      
 <!-- Card making-->
 
@@ -116,7 +116,7 @@
       <p>
 20 products are available
       </p>
-      <button class="nutrient" type="button">more about product</button>
+      <button class=" btn" type="button">more about product</button>
    
     </div>
 </div>
@@ -134,7 +134,7 @@
       <p>
 50 products are available
       </p>
-      <button class="nutrient" type="button">more about product</button>
+      <button class=" btn" type="button">more about product</button>
    
     </div>
 </div>
@@ -152,7 +152,7 @@
       <p>
 15 products are available
       </p>
-      <button class="nutrient" type="button">more about product</button>
+      <button class="btn" type="button">more about product</button>
    
     </div>
 </div>
@@ -170,7 +170,7 @@
       <p>
 No products are available.
       </p>
-      <button class="nutrient" type="button">more about product</button>
+      <button class="btn" type="button">more about product</button>
    
     </div>
 </div>
