changes apply on flex boxes

--- a/Pages/product-card.html
+++ b/Pages/product-card.html
@@ -104,7 +104,7 @@
 <!-- Card making-->
 
     <div class="row">
-     <div  class="container col col-lg-4 col-md-2 col-sm-1 m-4">
+     <div  class="container col col-lg-4 col-md-2 col-sm-1 m-auto">
         <img class="icecream" src="./../imgs/product-card/Wafer-Ice-Cream.jpg" height="200" alt="bottle"/>
          <div class="description">
            <h2>Wafer Ice-Cream
@@ -122,7 +122,7 @@
 </div>
 
 <!-- Card making-->
-     <div class="container col col-lg-4 col-md-2 col-sm-1 m-4">
+     <div class="container col col-lg-4 col-md-2 col-sm-1 m-auto">
         <img class="icecream chocobar" src="./../imgs/product-card/Chokobar.jpg" height="200" alt="bottle"/>
          <div class="description">
            <h2>Chocobar
@@ -140,7 +140,7 @@
 </div>
 
 <!-- Card making-->
-     <div  class="container col col-lg-4 col-md-2 col-sm-1 m-4">
+     <div  class="container col col-lg-4 col-md-2 col-sm-1 m-auto">
         <img class="icecream" src="./../imgs/product-card/Creamy-Cake.jpg" height="200" alt="bottle"/>
          <div class="description">
            <h2>Creamy Cake
@@ -158,7 +158,7 @@
 </div>
 
 <!-- Card making-->
-     <div class="container col col-lg-4 col-md-2 col-sm-1">
+     <div class="container col col-lg-4 col-md-2 col-sm-1 m-auto">
         <img class="icecream1" src="./../imgs/product-card/fashion-cat.webp" height="200" alt="bottle"/>
          <div class="description">
            <h2>Fashion cat
@@ -175,13 +175,15 @@ No products are available.
     </div>
 </div>
 </div>
-
+<!--product section starts-->
 <div class="products col col-lg-3 col-md-4 col-sm-2  my-1">
     <img src="./../imgs/product-card/Ice-pink.png" class="col product-image"  onclick="changeimage('Ice Cone')" alt="choco4" id="colors"/>
     <p class=" mx-4 my-auto ">
        <img src="./../imgs/product-card/pink.png"class="mx-1 my-0" alt="pink" height="35" onclick="ice('pink')"> <img src="./../imgs/product-card/yellow.png" alt="yellow" height="35" class="mx-3" onclick="ice('yellow')">
     </p>
    </div>
+<!--product section ends-->
+   
 <script>
            function changeimage(b)
             {
