--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -87,7 +87,7 @@ We Are An Awesome Agency.
                 <div class="card mb-3 card" style="max-width: 450px;">
                     <div class="row g-0">
                       <div class="col-md-4">
-                        <img src="./img/my image.jpg" class="img-fluid rounded-start p-1" alt="...">
+                        <img src="/imgs/about-page-img/Janvi.jpg" class="img-fluid rounded-start p-1" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -104,7 +104,7 @@ We Are An Awesome Agency.
                 <div class="card mb-3 card" style="max-width: 450px;">
                     <div class="row g-0">
                       <div class="col-md-4">
-                        <img src="./img/my image.jpg" class="img-fluid rounded-start p-1" alt="...">
+                        <img src="/imgs/about-page-img/sakshi.jpg" class="img-fluid rounded-start p-1" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
@@ -121,14 +121,14 @@ We Are An Awesome Agency.
                 <div class="card mb-3 card" style="max-width: 450px;">
                     <div class="row g-0">
                       <div class="col-md-4">
-                        <img src="./img/my image.jpg" class="img-fluid rounded-start p-1" alt="...">
+                        <img src="/imgs/about-page-img/Geetanjali.jpg" class="img-fluid rounded-start p-1" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
-                          <h5 class="card-title heading-font color">Janvi Chincholkar</h5><hr/>
+                          <h5 class="card-title heading-font color">Dolas Gitanjali</h5><hr/>
                           <p class="card-text pragraph-text">Creator</p>
-                          <p class="card-text pragraph-text"> • About page <br/> •Login Page <br/> •Registration Page</p>
-                          <p class="pragraph-text"> <a href="mailto:janvichincholkar14@gmail.com" class="color"> Send Mail</a>
+                          <p class="card-text pragraph-text"> • Review page </p>
+                          <p class="pragraph-text"> <a href="mailto:dolasgitanjali@gmail.com" class="color"> Send Mail</a>
                           </p> 
                         </div>
                       </div>
@@ -140,7 +140,7 @@ We Are An Awesome Agency.
                 <div class="card mb-3 card" style="max-width: 450px;">
                     <div class="row g-0">
                       <div class="col-md-4">
-                        <img src="./img/my image.jpg" class="img-fluid rounded-start p-1" alt="...">
+                        <img src="/imgs/about-page-img/shubhangini.jpg" class="img-fluid rounded-start p-1" alt="...">
                       </div>
                       <div class="col-md-8">
                         <div class="card-body">
