--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -34,7 +34,7 @@ We Are An Awesome Agency.
            </div>
 
            <div class="mt-4">
-            <a href="" style="color: #e83e8c;" > EXPLORE MORE </a>
+            <a href="" class="color" > EXPLORE MORE </a>
         </div>
 
         <div class="mt-4">
@@ -45,7 +45,7 @@ We Are An Awesome Agency.
         <div class="d-flex">
             <div class="mx-4 ext-start" >
                 <h1 class="heading-font fs-1 fw-bolder mt-5 mb-3">Our Story</h1>
-                <span style="color: #e83e8c;"> ━━━━━━━━━━    </span> &nbsp;&nbsp;&nbsp;&nbsp;
+                <span class="color"> ━━━━━━━━━━    </span> &nbsp;&nbsp;&nbsp;&nbsp;
                <span class="pragraph-text"> Creamy Desert</span>
                <p class="pragraph-text lh-lg fs-6 my-5">
                 Welcome to Creamy Desert, where every scoop tells a story! Our journey began with a simple desire to create moments of joy and indulgence through the timeless pleasure of ice cream. Nestled in the heart of our customer, our cozy shop invites you to embark on a delightful adventure of flavors and fun.
@@ -64,7 +64,7 @@ We Are An Awesome Agency.
         </div>
         <div class="mx-4 ext-start" >
             <h1 class="heading-font fs-1 fw-bolder mt-5 mb-3">Our Vision</h1>
-            <span style="color: #e83e8c;"> ━━━━━━━━━━    </span> &nbsp;&nbsp;&nbsp;&nbsp;
+            <span class="color"> ━━━━━━━━━━    </span> &nbsp;&nbsp;&nbsp;&nbsp;
            <span class="pragraph-text"> Creamy Desert</span>
            <p class="pragraph-text lh-lg fs-6 my-5">
             We're a gathering spot for friends and families to create memories together. Whether you're celebrating a special occasion, treating yourself after a long day, or simply craving a scoop of happiness, our friendly staff is here to make your visit unforgettable.</p>
