--- a/Pages/contact-page.html
+++ b/Pages/contact-page.html
@@ -16,7 +16,7 @@
 
     </div>
     <iframe
-        src="https://www.google.com/maps/embed?pb=!1m13!1m8!1m3!1d1891.8577531523456!2d73.9694876!3d18.4965414!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDI5JzQ2LjciTiA3M8KwNTgnMTIuNyJF!5e0!3m2!1sen!2sin!4v1712574417177!5m2!1sen!2sin"
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d846.9323716932453!2d74.46093933544091!3d20.903802059179633!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bdeef04875b6c27%3A0xb9b55ff007fa15d1!2sWF36%2BGHV%2C%20Deur%20Budruk%2C%20Maharashtra%20424302!5e0!3m2!1sen!2sin!4v1712828962206!5m2!1sen!2sin"
         width="100%" height="480" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
 
@@ -31,20 +31,18 @@
                 follow your order (tracking number will be provided in an e-mail after ordering).</p><br>
 
             <i class="fa-solid fa-phone-volume"></i>&ensp;&ensp;&ensp;&ensp;&ensp;<span>Mobile</span> <br><a
-                href="tel:8805803087" class="a">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;+91 8805803087</a><br><br>
+                href="tel:7744049590" class="a">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;+91 7744049590</a><br><br>
             <i class="fa-solid fa-envelope"></i>&ensp;&ensp;&ensp;&ensp;&ensp;<span>Email</span> <br><a
-                href="mailto: suraj@roadtocode.org"
-                class="a">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;suraj@roadtocode.org</a><br><br>
+                href="mailto: bhushanpotdar3@gmail.com"
+                class="a">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;bhushanpotdar3@gmail.com</a><br><br>
             <i class="fa-solid fa-location-dot"></i></i>&ensp;&ensp;&ensp;&ensp;&ensp;<span>Location</span><br>
-            <a href="https://maps.app.goo.gl/Rmh5xuF63HXWgcGK7" class="a">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;404,
-                Laxmi Heights, Above Lotus
-                Multi<br>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;speciality Hospital Manjari BK, pune - 412307
+            <a href="https://maps.app.goo.gl/TCA1th79iKR1wiRE9" class="a">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;107, Deur BK, Tal-Dhule, Dist-Dhule -424302
             </a><br><br><br>
 
 
         </div>
 
-        
+
         <div class="ms-4 me-4 ">
             <form>
                 <p style="font-size: 30px; font-weight:600">Send Us An Message</p>
@@ -54,7 +52,8 @@
                 <label for="EMAIL"></label>
                 <input type="email" id="EMAIL" required placeholder="Email" class="name-customer"><br>
                 <label for="mess"></label>
-                <textarea name="text" id="mess" cols="30" rows="10"complete placeholder="Message" required class="message-customer"></textarea><br><br>
+                <textarea name="text" id="mess" cols="30" rows="10" complete placeholder="Message" required
+                    class="message-customer"></textarea><br><br>
                 <button class="button" onclick="messageAlert()">Send</button><br><br>
             </form>
         </div>
