--- a/Pages/contact-page.html
+++ b/Pages/contact-page.html
@@ -5,12 +5,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="./../css/footer.css">
     <link rel="stylesheet" href="./../css/contact-page.css">
+    <link rel="stylesheet" href="./../css/header.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body style="background-color: #f9fad5">
+<header>
+    <div class="nav-container flex" id="nav">
+        <div class="right-flex flex">
+            <img src="./imgs/menu.png" height="40px" class="hamburger" onclick="openNavs()" alt="">
+            <h1 class="logo">LOGO</h1>
+        </div>
+        <div class="mid-flex">
+            <ul class="menu-list flex" type="none">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#aboutus">About Us</a></li>
+                <li><a href="#contactus">Contact Us</a></li>
+                <li><a href="#services">Services</a></li>
+            </ul>
+        </div>
+        <div class="left-flex">
+            <img src="./icons/magnifying-glass.png" class="nav-icons" alt="" onclick="openSearch()">
+            <img src="./icons/add-contact.png" class="nav-icons login-icon" alt="">
+            <img src="./icons/heart.png" class="nav-icons  heart-icon" alt="">
+            <img src="./icons/shopping-bag.png" class="nav-icons" alt="" onclick="openCarts()">
+        </div>
+    </div>
+
+</header>
+
+
+    
     <div class="header">
         <div class="head">Contact Us </div>
 
@@ -65,16 +93,65 @@
         <div>
             <p style="font-size: 30px; font-weight:600; margin-left:10px">Follow Us</p>
 
-            <a href="https://www.instagram.com/roadtocode4u" onclick="return ready()" class="a" target="_blank"><i
+            <a href="https://www.instagram.com/bhushan_potdar_19/" onclick="return ready()" class="a" target="_blank"><i
                     class="fa-brands fa-instagram"></i></a>&emsp;<a
-                href="https://www.linkedin.com/company/roadtocode4u/" class="a" onclick="return ready()"
-                target="_blank"><i class="fa-brands fa-linkedin"></i></a>&emsp;<a href="https://wa.me/8805803087"
+                href="https://www.linkedin.com/in/bhushan-potdar-62283a2a7/" class="a" onclick="return ready()"
+                target="_blank"><i class="fa-brands fa-linkedin"></i></a>&emsp;<a href="https://wa.me/7744049590"
                 class="a" onclick="return ready()" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-            &emsp;<a href="https://github.com/roadtocode4u" class="a" onclick="return ready()" target="_blank"><i
+            &emsp;<a href="https://github.com/bhushanpotdar19" class="a" onclick="return ready()" target="_blank"><i
                     class="fa-brands fa-github"></i></a>
         </div>
     </center>
-
+<br><br>
+<footer class="footer">
+    <div class="footer-container">
+        <div class="row">
+            <div class="footer-col">	
+ <h4 style="font-family: copperplate gothic light;font-size: 30px;">Journeyjet</h4>
+                <ul>
+                    <li style="color: white;">Welcome to our premier car rental website, <br>where your journey begins with
+                     convenience, <br> choice, and reliability</li>
+                </ul>
+            </div>
+         <div>&emsp</div>
+         <div>&emsp</div>
+            <div class="footer-col" class="link">
+                <h4>Quick Links</h4>
+                <ul>
+                 <li><a href="../../index.html">Home</a> </li>
+                 <li><a href="./../about.html">About US</a></li>
+                 <li> <a href="./../service.html">Services</a></li>
+                 <li><a href="./../contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Our Services</h4>
+                <ul>
+                 <li><a href="./../service.html">Car Booking</a></li>
+                 <li><a href="./../service.html">Unlimited Miles Car Rental</a></li>
+                 <li> <a href="./../service.html">Mobile Phone Reservation</a></li>
+                 <li><a href="./../service.html">One Way Car Rental</a></li>
+                </ul>
+            </div>
+            <div>&emsp</div>
+            <div class="footer-col">
+                <h4>follow us</h4>
+                <div class="social-links">
+                 <a href="http://youtube.com/@roadtocode4u" class=""><i class="fa-brands fa-youtube" alt="youtube-icon"></i></a>
+                 <a href="http://github.com/rutuja091" class=""><i class="fa-brands fa-github" alt="github-icon"></i></a>
+                 <a href="http://instagram.com/roadtocode4u" class=""><i class="fa-brands fa-instagram" alt="instagram-icon"></i></a>
+                 <a href="http://linkedin.com/company/roadtocode" class=""><i class="fa-brands fa-linkedin-in" alt="inkedin-icon"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
+  <p>&nbsp</p>
+  <p>&nbsp</p>
+  <p>&nbsp</p>
+    <p class="copyright">
+     Copyright&copy;Journeyjet 2024
+    </p>
+</footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
