--- a/pages/services.html
+++ b/pages/services.html
@@ -144,7 +144,7 @@
                     <div class=" d-flex justify-content-center align-items-center">
                         <div class="banner2 rounded-5 mt-3 mx-5 d-flex justify-content-center align-items-center flex-wrap shadow overflow-hidden ">
                             <div class=" text-center p-5  banner-flex"> 
-                                <img src="./../imgs/services/chokobar.png" class="border border-danger rounded-5 " alt="banner"
+                                <img src="./../imgs/services/chokobar.png" alt="banner"
                                     width="100%">
                             </div>
                             <div class="banner-flex text-center p-3 text-uppercase">
