--- a/Pages/about-us.html
+++ b/Pages/about-us.html
@@ -43,20 +43,19 @@ We Are An Awesome Agency.
         </div>
 
         <div class="d-flex">
-            <div class="mx-4 ext-start col-sm-12" >
-                <h1 class="heading-font fs-1 fw-bolder mt-5 mb-3">Our Story</h1>
-                <span class="color"> ━━━━━━━━━━    </span> &nbsp;&nbsp;&nbsp;&nbsp;
-               <span class="pragraph-text"> Creamy Desert</span>
-               <p class="pragraph-text lh-lg fs-6 my-5">
-                Welcome to Creamy Desert, where every scoop tells a story! Our journey began with a simple desire to create moments of joy and indulgence through the timeless pleasure of ice cream. Nestled in the heart of our customer, our cozy shop invites you to embark on a delightful adventure of flavors and fun.
-                
-             <p class="pragraph-text lh-lg fs-6 my-5">  At Creamy Desert, we believe that great ice cream starts with the finest ingredients and a dash of imagination. Each scoop is crafted with love and attention to detail, ensuring a creamy, decadent experience with every bite. </p>
+          <div class="mx-4 ext-start " >
+              <h1 class="heading-font fs-1 fw-bolder mt-5 mb-3">Our Story</h1>
+              <span class="color"> ━━━━━━━━━━    </span> &nbsp;&nbsp;&nbsp;&nbsp;
+             <span class="pragraph-text"> Creamy Desert</span>
+             <p class="pragraph-text lh-lg fs-6 my-5">
+              Welcome to Creamy Desert, where every scoop tells a story! Our journey began with a simple desire to create moments of joy and indulgence through the timeless pleasure of ice cream. Nestled in the heart of our customer, our cozy shop invites you to embark on a delightful adventure of flavors and fun.
+              
+           <p class="pragraph-text lh-lg fs-6 my-5">  At Creamy Desert, we believe that great ice cream starts with the finest ingredients and a dash of imagination. Each scoop is crafted with love and attention to detail, ensuring a creamy, decadent experience with every bite. </p>
         </div>
-
-        <div class=>
-            <img src="/imgs/about-page-img/stawberry-icecream.png" class="paragraph-img m-5 pt-5"/>
+        <div >
+          <img src="/imgs/about-page-img/stawberry-icecream.png" class="paragraph-img m-5 pt-5"/>
         </div>
-    </div>
+        </div>
 
     <div class="d-flex " >
         <div>
