--- a/Pages/menu-page.html
+++ b/Pages/menu-page.html
@@ -4,18 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu Page</title>
-  <link rel="stylesheet" href="./../css/menu_page.css">
+  <link rel="stylesheet" href="./../css/menu-page.css">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
-<body style="background-color:aliceblue;">
-  <header>
-    <h1>Ice Cream Parlor</h1>
+<body style="background-color: #fffffb;">
+  <header >
+  <br><br>
+    <h1 class="darkBody ">Ice Cream Parlor</h1>
+    <br>
 
   </header>
  <div class="name-container text-light ">
    <h2 class="page-heading text-center "> Products</h2>
-   <h6 class="text-center"><a href="./../index.html"class="decoration text-light"> Home </a> &nbsp;> &nbsp;<a href="./menu_page.html"class="decoration text-white"> Products</a> </h6>
+   <h6 class="text-center"><a href="./../index.html"class="decoration text-light"> Home </a> &nbsp;> &nbsp;<a href="./menu-page.html"class="decoration text-white"> Products</a> </h6>
    <marquee direction="right" behaviour="slide" scrolldelay="50">
    <div class="d-flex flex-row mb-3" >
       <div >
@@ -116,7 +118,7 @@
          <p class="category-div"><a href="./../Pages/icecreamSunade.html" target="screen">Ice-Cream Sundae</a></p>
      </div>
      <div>
-       <iframe src="./../Pages/flavour_page.html" height="800px" width="700px" name="screen" frameborder="0"></iframe>
+       <iframe src="./../Pages/flavour_page.html" height="800px" width="1600px" name="screen" frameborder="0"></iframe>
      </div>
   </div>
   
@@ -228,8 +230,8 @@
     Load More
     </div>
 </a>
-  <footer>
-    <p >&copy; 2024 Ice Cream Parlor</p>
+  <footer >
+<br><br><br>    <p class="darkBody">&copy; 2024 Ice Cream Parlor</p> <br><br><br>
   </footer>
   <script >
     function likedfunction(){
