some pages are renamed.

--- a/Pages/menu_page2nd.html
+++ b/Pages/menu_page2nd.html
@@ -14,7 +14,7 @@
   </header>
  <div class="name-container text-light ">
    <h2 class="page-heading text-center "> Products</h2>
-   <h6 class="text-center"><a href="./../index.html"class="decoration text-light"> Home </a> &nbsp;> &nbsp;<a href="./menu-page.html"class="decoration text-white"> Products</a> </h6>
+   <h6 class="text-center"><a href="./../index.html"class="decoration text-light"> Home </a> &nbsp;> &nbsp;<a href="./menu_page.html"class="decoration text-white"> Products</a> </h6>
    <marquee direction="right" behaviour="slide" scrolldelay="50">
    <div class="d-flex flex-row mb-3" >
       <div >
@@ -366,7 +366,7 @@
 
 </div>
 </div>
-<a href="./../pages/menu-page.html" class="decoration text-center">
+<a href="./../pages/menu_page.html" class="decoration text-center">
     <div class="filter-container load-more-btn ">
     Show Less
     </div>
