delete some containt of menu card.

--- a/Pages/menu_page.html
+++ b/Pages/menu_page.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Menu Page</title>
-  <link rel="stylesheet" href="./../css/menu-page.css">
+  <link rel="stylesheet" href="./../css/menu_page.css">
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body style="background-color: #fffffb;">
   <header >
   <br><br>
-    <h1 class="darkBody ">Ice Cream Parlor</h1>
+    <h1 >Ice Cream Parlor</h1>
     <br>
 
   </header>
@@ -112,7 +112,7 @@
   <div>
      <div>
          <p class="category-div"> <a href="./../Pages/cookies.html" target="screen">Cookies</a> </p>
-         <p class="category-div"><a href="./../Pages/cones.html"target="screen"></a>>Ice-Cream </a></p>
+         <p class="category-div"><a href="./../Pages/cones.html"target="screen">Ice-Cream </a></p>
          <p class="category-div"><a href="./../Pages/cones.html" target="screen">Cones</a></p>
          <p class="category-div"><a href="./../Pages/iceCreamBucket.html" target="screen">Ice-Cream Bucket</a></p>
          <p class="category-div"><a href="./../Pages/icecreamSunade.html" target="screen">Ice-Cream Sundae</a></p>
@@ -123,115 +123,11 @@
   </div>
   
 
-  </iframe>
+  
 
-  <div class="flavour-container" >
-<div class="row  ">
-    <div class=" flavour-card col col-md-2 col-lg-3" >
-        <div>
-           <img src="./../imgs/menu-card/Cereal-And-Milk.jpg" class="flavour-img" alt="">
-        </div>
-        <div class="effect-hover">
-            <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-            <img src="./../icons/menupage-icons/wishlist.png" height="20px"  id="liked" onclick="likedfunction(lk)" alt="">
-        </div>
-        <div class="flavour-description">
-            Cereal And Milk <br>
-            <p class="flavour-price">₹ 200.00 </p>
-        </div>
-    </div>
-
-    <div class="flavour-card col col-md-2 col-lg-3">
-        <div>
-            <img src="./../imgs/menu-card/Choco-Cherry.jpg" class="flavour-img" alt="">
-        </div>
-        <div class="effect-hover">
-           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
-        </div>
-        <div class="flavour-description">
-            Choco Cherry
-            <br>
-            <p class="flavour-price">₹ 360.00 </p>
-        </div>
-    </div>
-
-    <div class=" flavour-card col col-md-2 col-lg-3">
-        <div>
-            <img src="./../imgs/menu-card/Chokobar.jpg" class="flavour-img" alt="">
-        </div>
-        <div class="effect-hover">
-            <img src="./../icons/menupage-icons/shopping-bag.png"  height="20px">
-            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
-        </div>
-        <div class="flavour-description">
-            Chokobar
-            <br>
-            <p class="flavour-price">₹ 150.00 </p>
-        </div>
-    </div>
-
-    <div class="flavour-card col col-md-2 col-lg-3">
-        <div>
-            <img src="./../imgs/menu-card/chocolate-Wafer.jpg" class="flavour-img" alt="">
-        </div>
-        <div class="effect-hover">
-           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
-        </div>
-        <div class="flavour-description">
-            chocolate Wafer
-            <br>
-            <p class="flavour-price">₹ 320.00 </p>
-        </div>
-    </div>
-
-
-    <div class="flavour-card col col-md-2 col-lg-3">
-        <div>
-            <img src="./../imgs/menu-card/Cookie.jpg" class="flavour-img" alt="">
-        </div>
-        <div class="effect-hover">
-           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
-        </div>
-        <div class="flavour-description">
-            Cookie
-            <br>
-            <p class="flavour-price">₹ 480.00 </p>
-        </div>
-    </div>
-
-    <div class="flavour-card col col-md-2 col-lg-3">
-        <div>
-            <img src="./../imgs/menu-card/Cookies-Cream.jpg" class="flavour-img" alt="">
-        </div>
-        <div class="effect-hover">
-           <img src="./../icons/menupage-icons/shopping-bag.png" height="20px">
-            <img src="./../icons/menupage-icons/search.png" height="20px" alt="">
-            <img src="./../icons/menupage-icons/wishlist.png" height="20px" alt="">
-        </div>
-        <div class="flavour-description">
-            Cookies Cream
-            <br>
-            <p class="flavour-price">₹ 260.00 </p>
-        </div>
-    </div>
-
-</div>
-</div>
-<a href="./../pages/menu_page2nd.html" class="decoration text-center">
-    <div class="filter-container load-more-btn ">
-    Load More
-    </div>
-</a>
+ 
   <footer >
-<br><br><br>    <p class="darkBody">&copy; 2024 Ice Cream Parlor</p> <br><br><br>
+<br><br><br>    <p >&copy; 2024 Ice Cream Parlor</p> <br><br><br>
   </footer>
   <script >
     function likedfunction(){
