--- a/pages/buy_now.html
+++ b/pages/buy_now.html
@@ -9,14 +9,24 @@
 </head>
 <body>
   <form id="buyNowForm">
-    <label for="fullName">Full-Name:</label>
+    <label for="fullName">Name(First and Last Name):</label>
     <input type="text" id="fullName" name="fullName" required><br><br>
 
-    <label for="email">Email:</label>
-  <input type="email" id="email" name="email" required><br><br>
+    <label for="mobile-no">Mobile-No:</label>
+    <input type="mobile-no" id="mobile-no" name="mobile-no" required><br><br>
 
-     <label for="address">address:</lable>
-  <input type="text" id="address" name="address" required><br><br>
+    <label for="Flat,Houseno,Buliding,company">Flat,Houseno,Buliding,company:</lable>
+    <input type="Flat,Houseno,Buliding,company" id="Flat,Houseno,Buliding,company" name="Flat,Houseno,Buliding,company" required><br><br>
+
+    <label for="area, street,sector,village">area, street,sector,village:</label>
+    <input type="area, street,sector,village" id="area, street,sector,village" name="area, street,sector,village" required><br><br>
+
+    <label for="Landmark">Landmark:</label>
+    <input type="Landmark" id="Landmark" name="Landmark" required><br><br>
+
+    <label for="Landmark">Landmark:</label>
+    <input type="Landmark" id="Landmark" name="Landmark" required><br><br>
+
 
   <button type="submit">Comfirm-Order</button>
   </form>
