--- a/Pages/menu_page.html
+++ b/Pages/menu_page.html
@@ -108,17 +108,19 @@
   <div class="filter-container">
     <img src="./../icons/menupage-icons/filter.png" height="20px" alt="">Filter
   </div>
-<p>Available Desserts</p>
+<p class="category-heading">Available Desserts</p>
   <div>
-     <div>
-         <p class="category-div"> <a href="./../Pages/cookies.html" target="screen">Cookies</a> </p>
-         <p class="category-div"><a href="./../Pages/cones.html"target="screen">Ice-Cream </a></p>
-         <p class="category-div"><a href="./../Pages/cones.html" target="screen">Cones</a></p>
-         <p class="category-div"><a href="./../Pages/iceCreamBucket.html" target="screen">Ice-Cream Bucket</a></p>
-         <p class="category-div"><a href="./../Pages/icecreamSunade.html" target="screen">Ice-Cream Sundae</a></p>
+     <div class=" parent-card" >
+        <p class="category-div"> <a href="./../Pages/flavour_page.html" class="decoration deco-text" target="screen">All</a> </p>
+         <p class="category-div"> <a href="./../Pages/cookies.html" class="decoration deco-text" target="screen">Cookies</a> </p>
+         <p class="category-div"><a href="./../Pages/cones.html"  class="decoration deco-text" target="screen">Ice-Cream </a></p>
+         <p class="category-div"><a href="./../Pages/cones.html" class="decoration deco-text" target="screen">Cones</a></p>
+         <p class="category-div"><a href="./../Pages/iceCreamBucket.html" class="decoration deco-text" target="screen">Ice-Cream Bucket</a></p>
+         <p class="category-div"><a href="./../Pages/icecreamSunade.html"  class="decoration deco-text" target="screen">Ice-Cream Sundae</a></p>
      </div>
+   
      <div>
-       <iframe src="./../Pages/flavour_page.html" height="800px" width="1600px" name="screen" frameborder="0"></iframe>
+       <iframe src="./../Pages/flavour_page.html" height="1000px" width="1600px" name="screen" frameborder="0"></iframe>
      </div>
   </div>
   
