menu page html and css file edited.

--- a/Pages/menu_page.html
+++ b/Pages/menu_page.html
@@ -111,12 +111,12 @@
 <p class="category-heading">Available Desserts</p>
   <div>
      <div class=" parent-card" >
-        <p class="category-div"> <a href="./../Pages/flavour_page.html" class="decoration deco-text" target="screen">All</a> </p>
-         <p class="category-div"> <a href="./../Pages/cookies.html" class="decoration deco-text" target="screen">Cookies</a> </p>
-         <p class="category-div"><a href="./../Pages/cones.html"  class="decoration deco-text" target="screen">Ice-Cream </a></p>
-         <p class="category-div"><a href="./../Pages/cones.html" class="decoration deco-text" target="screen">Cones</a></p>
-         <p class="category-div"><a href="./../Pages/iceCreamBucket.html" class="decoration deco-text" target="screen">Ice-Cream Bucket</a></p>
-         <p class="category-div"><a href="./../Pages/icecreamSunade.html"  class="decoration deco-text" target="screen">Ice-Cream Sundae</a></p>
+        <p class="category-div filter-container"> <a href="./../Pages/flavour_page.html" class="decoration deco-text" target="screen">All</a> </p>
+         <p class="category-div filter-container"> <a href="./../Pages/cookies.html" class="decoration deco-text" target="screen">Cookies</a> </p>
+         <p class="category-div filter-container"><a href="./../Pages/cones.html"  class="decoration deco-text" target="screen">Ice-Cream </a></p>
+         <p class="category-div filter-container"><a href="./../Pages/cones.html" class="decoration deco-text" target="screen">Cones</a></p>
+         <p class="category-div filter-container"><a href="./../Pages/iceCreamBucket.html" class="decoration deco-text" target="screen">Ice-Cream Bucket</a></p>
+         <p class="category-div filter-container"><a href="./../Pages/icecreamSunade.html"  class="decoration deco-text" target="screen">Ice-Cream Sundae</a></p>
      </div>
    
      <div>
