--- a/Pages/product-card.html
+++ b/Pages/product-card.html
@@ -308,7 +308,15 @@ No products are available.
             total.innerText = `Total amount ${quantity * 139}`;
            }
 
-        
+           var btnvar1 = document.getElementById("btnh1");
+           function Toggle1(){
+            if (btnvar1.style.color =="red"){
+                btnvar1.style.color = "grey"
+            }
+            else{
+                btnvar1.style.color = "red"
+            }
+           }
 
            
 
