plus minus with fontawesome

--- a/Pages/product-card.html
+++ b/Pages/product-card.html
@@ -27,9 +27,10 @@
         <div><img  src="./../imgs/product-card/choco2.png" class="mx-5" id="choco2" alt="choco2"/> </div>
      <div class="ice-des d-inline-block text-start fs-5 mx-5"> <h1 id="name">Cereal And Milk</h1> <h3 id="price">only at ₹160/-</h3>
         <div class="id">
-            <img id="minus" src="./../imgs/product-card/minus.png" height="35" onclick="dec()">
+             <span id="minus" onclick="dec()"><i class="fa-solid fa-circle-minus outline-hidden fs-2 mt-auto" style="color:#e83e8c;"></i></span>
+
             <span class="one" id="one">1 </span>
-            <img id="plus" src="./../imgs/product-card/plus.png" height="45" onclick="inc()">
+            <span id="plus" onclick="inc()"><i class="fa-solid fa-circle-plus outline-hidden fs-2 mt-auto" style="color:#e83e8c;"></i></span>
 
     </div>
         <p id="order">You Order:<p>
