--- a/pages/services.html
+++ b/pages/services.html
@@ -31,6 +31,25 @@
             width: 400px;
         }
 
+        .buyNow-btn1 {
+            border: 1px solid black;
+            margin: 20px;
+            padding: 10px 20px;
+            background-color: #000;
+            font-size: 10px;
+            color: #fff;
+            border-radius: 60px;
+            font-weight: bold;
+            text-decoration: none;
+            font-size: 20px;
+            transition: all .3s ease-out;
+        }
+
+        .buyNow-btn1:hover {
+            background-color: transparent;
+            color: black;
+        }
+
         .banner1 {
             background: linear-gradient(-55deg, #ff7675 29%, #d63031 29.1%, #d63031 68%, #ff7675 68.1%);
         }
@@ -129,8 +148,7 @@
                                 <span class="text-light fs-2">Enjoy</span>
                                 <h3 class="text-light"> 25% OFF</h3>
                                 <p class="text-light fs-3 px-4">on all items</p>
-                                <a href="#" class="btn"> <button type="button"
-                                        class="btn btn-danger px-5 mb-5 rounded-5 fs-4">Buy Now</button></a>
+                                <a href="#"> <button type="button" class="buyNow-btn1">Buy Now</button></a>
                             </div>
                             <div class="women position-relative bottom-50 banner-flex">
                                 <img src="./../imgs/services/girl.png" alt="" width="100%">
@@ -149,7 +167,7 @@
                                 <span class="text-light fs-2">delicious</span>
                                 <h3 class="text-light fw-bolder">ice cream</h3>
                                 <p class="text-light fs-6 px-4">offer ends after 5 days</p>
-                                <button type="button" class="btn btn-danger px-5 mb-5 rounded-5 fs-4 position-relative">
+                                <button type="button" class="buyNow-btn1 position-relative">
                                     Buy Now
                                     <span
                                         class="banner2-badge position-absolute top-0 start-100 translate-middle badge p-2 bg-warning">
@@ -167,7 +185,7 @@
                     <div class=" d-flex justify-content-center align-items-center">
                         <div
                             class="banner3 rounded-5 mt-3 mx-5 d-flex justify-content-center align-items-center flex-wrap shadow overflow-hidden ">
-                            <div class=" text-center p-5 banner-flex">
+                            <div class=" text-center p-5 ms-5 banner-flex">
                                 <img src="./../imgs/services/vanila.png" class="border border-danger rounded-5 "
                                     alt="banner" width="80%">
                             </div>
@@ -175,11 +193,11 @@
                                 <span class="text-light fs-1 fw-bolder">Buy Two</span>
                                 <h3 class="text-light">Get 1 </h3>
                                 <p class="text-light fs-6 px-4">offer ends after 10 days</p>
-                                <a href="#" class="btn"> <button type="button"
-                                        class="btn btn-danger px-5 mb-5 rounded-5 fs-4">Buy Now</button></a>
+                                <a href="#"> <button type="button"
+                                        class="buyNow-btn1">Buy Now</button></a>
                             </div>
                             <div class="women position-relative bottom-50 banner-flex">
-                                <img src="./../imgs/services/free.png" alt="" width="80%">
+                                <img src="./../imgs/services/free.png" alt="" width="100%" height="100%">
                             </div>
                         </div>
                     </div>
@@ -203,7 +221,8 @@
                     <div class="card-body">
                         <img src="./../png/delivery.png" alt="icon" width="80px">
                         <h3 class="fs-2">Free Delivery</h3>
-                        <p class="fs-5 text-muted">Enjoy the convenience of shopping from home with FREE DELIVERY on all orders! 🛍️ No
+                        <p class="fs-5 text-muted">Enjoy the convenience of shopping from home with FREE DELIVERY on all
+                            orders! 🛍️ No
                             minimum purchase required. Get your favorite items delivered straight to your doorstep
                             without any extra charge.</p>
                     </div>
@@ -215,7 +234,8 @@
                     <div class="card-body">
                         <img src="./../png/healthy-food.png" alt="icon" width="80px">
                         <h3 class="fs-2">Fresh And Organic</h3>
-                        <p class="fs-5 text-muted">Treat yourself to a guilt-free delight with our delicious range of Fresh and Organic Ice
+                        <p class="fs-5 text-muted">Treat yourself to a guilt-free delight with our delicious range of
+                            Fresh and Organic Ice
                             Cream! Made from the finest natural ingredients, our creamy concoctions are bursting
                             with flavor and goodness.</p>
                     </div>
@@ -227,7 +247,8 @@
                     <div class="card-body">
                         <img src="./../png/payment.png" alt="icon" width="80px">
                         <h3 class="fs-2">Easy Payments</h3>
-                        <p class="fs-5 text-muted">Indulge in our scrumptious Easy Payments Ice Cream and satisfy your sweet cravings
+                        <p class="fs-5 text-muted">Indulge in our scrumptious Easy Payments Ice Cream and satisfy your
+                            sweet cravings
                             without any hassle! With our convenient payment options, treating yourself to creamy
                             goodness has never been easier.</p>
                     </div>
