new section of variety is created

--- a/Pages/product-card.html
+++ b/Pages/product-card.html
@@ -121,7 +121,7 @@
      </div></div>
      <!--Cards are started-->
 <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-    <h1 class="fs-1 text-center">More about our products</h1>
+    <h1 class="fs-1 text-center my-5">More about our products</h1>
      
 <!-- Card making-->
 
@@ -138,7 +138,7 @@
       <p>
 20 products are available
       </p>
-      <button class=" btn" type="button">more about product</button>
+      <button class="btn mb-auto" type="button">more about product</button>
    
     </div>
 </div>
@@ -198,6 +198,7 @@ No products are available.
 </div>
 </div>
 <!--product section starts-->
+<h1 class="fs-1 text-center my-5">More Variety</h1>
 <div class="products col col-lg-3 col-md-4 col-sm-2  my-1">
     <img src="./../imgs/product-card/Ice-pink.png" class="col product-image"  onclick="changeimage('Ice Cone')" alt="choco4" id="colors"/>
     <p class=" mx-4 my-auto ">
